--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <style>
       body {
         padding: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
+
+
     </style>
   </head>
   <body>
